<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.geysermc</groupId>
    <artifactId>geyser-parent</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Geyser</name>
    <description>Allows for players from Minecraft Bedrock Edition to join Minecraft Java Edition servers.</description>
    <url>https://geysermc.org</url>

    <properties>
        <outputName>Geyser</outputName>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>

        <adventure.version>4.9.3</adventure.version>
    </properties>

    <organization>
        <name>GeyserMC</name>
        <url>https://github.com/GeyserMC/Geyser/blob/master/pom.xml</url>
    </organization>

    <scm>
        <connection>scm:git:https://github.com/GeyserMC/Geyser.git</connection>
        <developerConnection>scm:git:git@github.com:GeyserMC/Geyser.git</developerConnection>
        <url>https://github.com/GeyserMC/Geyser</url>
    </scm>

    <modules>
        <module>ap</module>
        <module>api</module>
        <module>bootstrap</module>
        <module>common</module>
        <module>core</module>
    </modules>

    <pluginRepositories>
        <!-- Remove once maven-shade-plugin gets a stable release that supports Java 16 -->
        <pluginRepository>
            <id>apache.snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <!-- Remove once maven-shade-plugin gets a stable release that supports Java 16 -->
        <repository>
            <id>apache.snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>opencollab-release-repo</id>
            <url>https://repo.opencollab.dev/maven-releases/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>opencollab-snapshot-repo</id>
            <url>https://repo.opencollab.dev/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.20</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
